# cs2-mpd-rs

./: .env  .env.sample  .gitignore  .rustfmt.toml  Cargo.toml  Justfile  Makefile  README.org  bacon.toml  default.nix  flake.nix  rust-toolchain.toml  shell.nix
data/.local/share/Steam/steamapps/common/Counter-Strike Global Offensive/csgo/cfg/: gamestate_integration_csgo-mpd.cfg
data/.local/share/Steam/steamapps/common/Counter-Strike Global Offensive/game/csgo/cfg/: gamestate_integration_cs2-mpd.cfg
src/: csgo_data.rs  gamestate.rs  lib.rs  main.rs  music.rs
