[package]
name = "csgo-mpd-rs"
version = "0.1.0"
authors = ["Dietrich Daroch <dietr1ch@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mpd = "0.0.12"
serde = "1.0.106"
