# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cs2-mpd-rs"
version = "0.1.0"
authors = ["Dietrich Daroch <dietrich@daroch.me>"]
edition = "2024"

default-run = "cs2_mpd_server"  # src/bin/cs2_mpd_server.rs

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
clap = { version = "4.5.43", features = ["derive", "env"] }
color-eyre = "0.6.5"
mpd = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
